--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <hr />
     <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3><img src="1.png" 
         alt="best ranking movies according to Hakeem" width="400" height="200" /></a>
-    <a href="/public/birthday-invite.html"><h3>Birthday Invite Project</h3>
+    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3>
         <img src="./assets/images/birthday-invite.png" 
         alt="Birthday cake image" width="300" height="300" /></a>
     <hr>
     <ul>
         <li>
-            <a href="/public/about.html">About Me</a>
+            <a href="./public/about.html">About Me</a>
         </li>
         <li>
-            <a href="/public/contact.html">Contact Me</a>
+            <a href="./public/contact.html">Contact Me</a>
         </li>
     </ul>
 </body>
